--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "koishi-plugin-ygo-card-search",
-  "version": "1.1.1",
+  "version": "1.2.0",
   "peerDependencies": {
     "koishi": "^4.17.12"
   },
@@ -23,8 +23,8 @@
   },
   "koishi": {
     "description": {
-      "en": "A YuGiOh card checking plugin for personal use",
-      "zh": "游戏王查卡插件"
+      "en": "A YuGiOh card checking plugin for Koishi.",
+      "zh": "适用于Koishi的游戏王查卡插件"
     }
   },
   "repository": {
