--- a/预置的用于参考的替换规则/replaceConfig.json
+++ b/预置的用于参考的替换规则/replaceConfig.json
@@ -6,15 +6,12 @@
   "刻魔锻冶师": [
     "刻魔"
   ],
-  "罕见": [
-    "相剑大邪-七星龙渊",
+  "相剑大邪-七星龙渊": [
+    "罕见",
     "东雪莲"
   ],
-  "中国剑": [
-    "相剑"
-  ],
-  "小夜": [
-    "S：P小夜"
+  "S：P小夜": [
+    "小夜"
   ],
   "斩机 圆武": [
     "O神",
@@ -26,8 +23,8 @@
     "帝企",
     "帝骑哥"
   ],
-  "幻影": [
-    "于贝尔幻影"
+  "于贝尔幻影": [
+    "幻影"
   ],
   "半龙女仆·洗衣龙女": [
     "小蓝"
@@ -113,5 +110,39 @@
   ],
   "直播☆双子": [
     "双子"
+  ],
+  "妖眼之相剑师": [
+    "妖眼"
+  ],
+  "群豪之巫女-东云": [
+    "东云",
+    "冬云"
+  ],
+  "正义的同伴 海马侠": [
+    "海马"
+  ],
+  "教导的圣女 艾克莉西娅": [
+    "饭桶"
+  ],
+  "自奏圣乐·伽拉忒亚": [
+    "蓝妹妹"
+  ],
+  "水晶机巧-继承玻纤": [
+    "水机"
+  ],
+  "黑魔女 迪亚贝尔斯塔尔": [
+    "黑魔女"
+  ],
+  "深渊之兽 赫界龙": [
+    "金龙"
+  ],
+  "欧西里斯之天空龙": [
+    "天空龙"
+  ],
+  "半龙女仆·耀光龙女": [
+    "龙女仆大姐"
+  ],
+  "半龙女仆·龙女管家": [
+    "龙女仆二姐"
   ]
 }
