--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "koishi-plugin-ygo-card-search",
-  "version": "1.1.1",
+  "version": "2.0.1",
   "peerDependencies": {
-    "koishi": "^4.17.12"
+    "koishi": "^4.18.0"
   },
   "description": "适用于Koishi的游戏王查卡插件，使用 百鸽（ygocdb.com） API获取数据。",
   "main": "lib/index.js",
@@ -23,8 +23,8 @@
   },
   "koishi": {
     "description": {
-      "en": "A YuGiOh card checking plugin for personal use",
-      "zh": "游戏王查卡插件"
+      "en": "A YuGiOh card searching plugin for Koishi.",
+      "zh": "适用于Koishi的游戏王查卡插件"
     }
   },
   "repository": {
