--- a/预置的用于参考的替换规则/replaceConfig.json
+++ b/预置的用于参考的替换规则/replaceConfig.json
@@ -108,9 +108,6 @@
   "白银之城的召使 阿里亚娜": [
     "白银城小粉"
   ],
-  "直播☆双子": [
-    "双子"
-  ],
   "妖眼之相剑师": [
     "妖眼"
   ],
@@ -144,5 +141,45 @@
   ],
   "半龙女仆·龙女管家": [
     "龙女仆二姐"
+  ],
+  "解码语者·炽热之魂": [
+    "火码"
+  ],
+  "暗之诱惑": [
+    "暗抽"
+  ],
+  "强欲而贪欲之壶": [
+    "吸毒壶"
+  ],
+  "超魔导龙骑士-真红眼龙骑士": [
+    "红蛆",
+    "红爹"
+  ],
+  "防火龙·暗流体-新电磁泄密风": [
+    "彩流体"
+  ],
+  "机甲部队·毁灭武装力量": [
+    "泥头车"
+  ],
+  "原罪之迪亚贝尔泽": [
+    "白魔女"
+  ],
+  "星杯的神子 夏娃": [
+    "神子"
+  ],
+  "次元吸引者": [
+    "大宇宙人"
+  ],
+  "魔法族之里": [
+    "魔里"
+  ],
+  "蛇眼梣树灵": [
+    "蛇眼小蓝"
+  ],
+  "蛇眼炎磷": [
+    "蛇眼小粉"
+  ],
+  "蛇眼橡树灵": [
+    "蛇眼小绿"
   ]
 }
