更新了卡名可选项

--- a/预置的用于参考的替换规则/replaceConfig.json
+++ b/预置的用于参考的替换规则/replaceConfig.json
@@ -1,185 +1,74 @@
 {
-  "艾克佐迪亚": [
-    "暗黑大法师",
-    "黑暗大法师"
-  ],
-  "刻魔锻冶师": [
-    "刻魔"
-  ],
-  "相剑大邪-七星龙渊": [
-    "罕见",
-    "东雪莲"
-  ],
-  "S：P小夜": [
-    "小夜"
-  ],
-  "斩机 圆武": [
-    "O神",
-    "圆神",
-    "原神"
-  ],
-  "随风旅鸟×帝企": [
-    "帝骑",
-    "帝企",
-    "帝骑哥"
-  ],
-  "于贝尔幻影": [
-    "幻影"
-  ],
-  "半龙女仆·洗衣龙女": [
-    "小蓝"
-  ],
-  "混沌魔龙 混沌支配者": [
-    "大蓝"
-  ],
-  "珠泪哀歌族·小美人鱼": [
-    "美人鱼"
-  ],
-  "宵星之机神 丁吉尔苏": [
-    "黑哥哥"
-  ],
-  "自奏圣乐·朗基尔苏": [
-    "蓝哥哥"
-  ],
-  "维萨斯-斯塔弗罗斯特": [
-    "男同"
-  ],
-  "维萨斯-阿密哩多罗": [
-    "白男同",
-    "白维萨斯"
-  ],
-  "珠泪哀歌族·水仙女人鱼": [
-    "水仙"
-  ],
-  "末那愚子族·三界歌水仙女": [
-    "白水仙"
-  ],
-  "珠泪哀歌族·卡雷多哈特": [
-    "章鱼哥"
-  ],
-  "珠泪哀歌族·塞壬人鱼": [
-    "塞壬"
-  ],
-  "神影依·米德拉什": [
-    "小米"
-  ],
-  "神影依·拿非利": [
-    "拿妈"
-  ],
-  "白色少女": [
-    "白之少女"
-  ],
-  "青眼喷气龙": [
-    "飞机龙"
-  ],
-  "墓穴的指名者": [
-    "指名者"
-  ],
-  "手札抹杀": [
-    "抹杀"
-  ],
-  "灾厄之星 提·丰": [
-    "提丰"
-  ],
-  "电子龙·无限": [
-    "无限"
-  ],
-  "天霆号 阿宙斯": [
-    "高达"
-  ],
-  "赤き竜": [
-    "红龙"
-  ],
-  "命运英雄 毁灭凤凰人": [
-    "凤凰人"
-  ],
-  "原始生命态 尼比鲁": [
-    "陨石"
-  ],
-  "白银之城的拉比林斯": [
-    "白银城大姐"
-  ],
-  "迷宫城的白银姬": [
-    "白银城二姐"
-  ],
-  "白银之城的召使 阿里安娜": [
-    "白银城小绿"
-  ],
-  "白银之城的召使 阿里亚娜": [
-    "白银城小粉"
-  ],
-  "妖眼之相剑师": [
-    "妖眼"
-  ],
-  "群豪之巫女-东云": [
-    "东云",
-    "冬云"
-  ],
-  "正义的同伴 海马侠": [
-    "海马"
-  ],
-  "教导的圣女 艾克莉西娅": [
-    "饭桶"
-  ],
-  "自奏圣乐·伽拉忒亚": [
-    "蓝妹妹"
-  ],
-  "水晶机巧-继承玻纤": [
-    "水机"
-  ],
-  "黑魔女 迪亚贝尔斯塔尔": [
-    "黑魔女"
-  ],
-  "深渊之兽 赫界龙": [
-    "金龙"
-  ],
-  "欧西里斯之天空龙": [
-    "天空龙"
-  ],
-  "半龙女仆·耀光龙女": [
-    "龙女仆大姐"
-  ],
-  "半龙女仆·龙女管家": [
-    "龙女仆二姐"
-  ],
-  "解码语者·炽热之魂": [
-    "火码"
-  ],
-  "暗之诱惑": [
-    "暗抽"
-  ],
-  "强欲而贪欲之壶": [
-    "吸毒壶"
-  ],
-  "超魔导龙骑士-真红眼龙骑士": [
-    "红蛆",
-    "红爹"
-  ],
-  "防火龙·暗流体-新电磁泄密风": [
-    "彩流体"
-  ],
-  "机甲部队·毁灭武装力量": [
-    "泥头车"
-  ],
-  "原罪之迪亚贝尔泽": [
-    "白魔女"
-  ],
-  "星杯的神子 夏娃": [
-    "神子"
-  ],
-  "次元吸引者": [
-    "大宇宙人"
-  ],
-  "魔法族之里": [
-    "魔里"
-  ],
-  "蛇眼梣树灵": [
-    "蛇眼小蓝"
-  ],
-  "蛇眼炎磷": [
-    "蛇眼小粉"
-  ],
-  "蛇眼橡树灵": [
-    "蛇眼小绿"
-  ]
+  "艾克佐迪亚": ["暗黑大法师", "黑暗大法师"],
+  "刻魔锻冶师": ["刻魔"],
+  "相剑大邪-七星龙渊": ["罕见", "东雪莲"],
+  "S：P小夜": ["小夜"],
+  "斩机 圆武": ["O神", "圆神", "原神"],
+  "随风旅鸟×帝企": ["帝骑", "帝企", "帝骑哥"],
+  "于贝尔幻影": ["幻影"],
+  "半龙女仆·洗衣龙女": ["小蓝"],
+  "混沌魔龙 混沌支配者": ["大蓝"],
+  "珠泪哀歌族·小美人鱼": ["美人鱼"],
+  "宵星之机神 丁吉尔苏": ["黑哥哥"],
+  "自奏圣乐·朗基尔苏": ["蓝哥哥"],
+  "维萨斯-斯塔弗罗斯特": ["男同"],
+  "维萨斯-阿密哩多罗": ["白男同", "白维萨斯"],
+  "珠泪哀歌族·水仙女人鱼": ["水仙"],
+  "末那愚子族·三界歌水仙女": ["白水仙"],
+  "珠泪哀歌族·卡雷多哈特": ["章鱼哥"],
+  "珠泪哀歌族·塞壬人鱼": ["塞壬"],
+  "神影依·米德拉什": ["小米"],
+  "神影依·拿非利": ["拿妈"],
+  "白色少女": ["白之少女"],
+  "青眼喷气龙": ["飞机龙"],
+  "墓穴的指名者": ["指名者"],
+  "手札抹杀": ["抹杀"],
+  "灾厄之星 提·丰": ["提丰"],
+  "电子龙·无限": ["无限"],
+  "天霆号 阿宙斯": ["高达"],
+  "赤き竜": ["红龙"],
+  "命运英雄 毁灭凤凰人": ["凤凰人"],
+  "原始生命态 尼比鲁": ["陨石"],
+  "白银之城的拉比林斯": ["白银城大姐"],
+  "迷宫城的白银姬": ["白银城二姐"],
+  "白银之城的召使 阿里安娜": ["白银城小绿"],
+  "白银之城的召使 阿里亚娜": ["白银城小粉"],
+  "妖眼之相剑师": ["妖眼"],
+  "群豪之巫女-东云": ["东云", "冬云"],
+  "正义的同伴 海马侠": ["海马"],
+  "教导的圣女 艾克莉西娅": ["饭桶"],
+  "自奏圣乐·伽拉忒亚": ["蓝妹妹"],
+  "水晶机巧-继承玻纤": ["水机"],
+  "黑魔女 迪亚贝尔斯塔尔": ["黑魔女"],
+  "深渊之兽 赫界龙": ["金龙"],
+  "欧西里斯之天空龙": ["天空龙"],
+  "半龙女仆·耀光龙女": ["龙女仆大姐"],
+  "半龙女仆·龙女管家": ["龙女仆二姐"],
+  "解码语者·炽热之魂": ["火码"],
+  "暗之诱惑": ["暗抽"],
+  "强欲而贪欲之壶": ["吸毒壶"],
+  "超魔导龙骑士-真红眼龙骑士": ["红蛆", "红爹"],
+  "防火龙·暗流体-新电磁泄密风": ["彩流体"],
+  "机甲部队·毁灭武装力量": ["泥头车"],
+  "星杯的神子 夏娃": ["神子"],
+  "次元吸引者": ["大宇宙人"],
+  "魔法族之里": ["魔里"],
+  "蛇眼梣树灵": ["蛇眼小蓝"],
+  "蛇眼炎磷": ["蛇眼小粉"],
+  "蛇眼橡树灵": ["蛇眼小绿"],
+  "欢聚友伴·抖抖海月水母": ["水G", "水g"],
+  "欢聚友伴·茸茸长尾山雀": ["风G", "鸟G", "鸟g"],
+  "PSY骨架装备·γ": ["p头"],
+  "DDD 双晓王 末法神": ["椅子王"],
+  "恐吓爪牙族型俱舍怒威族": ["红狗"],
+  "珠泪哀歌族型俱舍怒威族": ["红人鱼"],
+  "兽带斗神“王者”轩辕十四": ["工头"],
+  "真龙皇 法·王·兽": ["法法"],
+  "闪刀机关-多任务战刀机": ["跳楼机"],
+  "黄金卿 黄金国巫妖": ["小金人", "罗志祥"],
+  "恐龙摔跤手·潘克拉辛角龙": ["问心无愧"],
+  "召命之神弓-阿波罗萨": ["神弓"],
+  "励辉士 入魔蝇王": ["白小强"],
+  "侵入魔鬼·蟑蠊": ["黑小强"],
+  "原石龙 变种绿柱石龙": ["原石小龙"]
 }
